Fix layout problem

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -22,11 +22,11 @@
       height: calc(45vw);
     }
     .frame-height-desktop {
-      height: calc(31vw);
+      height: 90vh;
     }
-    .stage-height-desktop {
+    /* .stage-height-desktop {
       height: calc(50vw);
-    }
+    } */
     .w-18 {
       width: 4.5rem;
     }
